--- a/src/app/Entidad/home-estado/home-estado.component.html
+++ b/src/app/Entidad/home-estado/home-estado.component.html
@@ -12,7 +12,7 @@
       <td>{{estado.estado_id}}</td>
       <td>{{estado.estado}}</td>
       <td>
-        <a class = "btn btn-primary btn-sm" routerLink="/form/{{estado.estado_id}}">Ver/Editar</a>
+        <a class = "btn btn-primary btn-sm" routerLink="/estadosEdit/{{estado.estado_id}}">Ver/Editar</a>
         <a class = "btn btn-primary btn-sm btn-danger" (click)="delete(estado.estado_id)">Eliminar</a>
       </td>
     </tr>
