--- a/src/app/cabezeras/cabezera-noticia/cabezera-noticia.component.html
+++ b/src/app/cabezeras/cabezera-noticia/cabezera-noticia.component.html
@@ -1,21 +1,14 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand">Administrador</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
         <li class="nav-item active">
-            <a class="nav-link" routerLink="/productos">Productos <span class="sr-only">(current)</span></a>
-        </li>
-        <li>
-            <a class="nav-link" routerLink="/categorias">Categorias <span class="sr-only">(current)</span></a>
-        </li>
-        <li>
-            <a class="nav-link" routerLink="/estados">Estados <span class="sr-only">(current)</span></a>
-        </li>
-        <li>
             <a class="nav-link" routerLink="/noticias">Noticias <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" routerLink="/noticiasEdit">Ingresar Noticia</a>
         </li>
         </ul>
     </div>
