--- a/src/app/cabezeras/cabezera/cabezera.component.html
+++ b/src/app/cabezeras/cabezera/cabezera.component.html
@@ -17,6 +17,9 @@
         <li>
             <a class="nav-link" routerLink="/noticias">Noticias <span class="sr-only">(current)</span></a>
         </li>
+        <li>
+            <a class="nav-link" routerLink="/eventos">Eventos <span class="sr-only">(current)</span></a>
+        </li>
         </ul>
     </div>
 </nav>
