--- a/src/app/Forms/form/form.component.html
+++ b/src/app/Forms/form/form.component.html
@@ -7,7 +7,7 @@
   </div>
   <div class="form-group">
     <label for="precio">Precio producto</label>
-    <input [(ngModel)]="producto.precio" type="number" class="form-control" id="precio" placeholder="">
+    <input [(ngModel)]="producto.precio" type="number" step=0.001 class="form-control" id="precio" placeholder="">
   </div>
   <div class="form-group">
     <label for="cantidad">Cantidad producto</label>
