CRUD pedido falta verificaciones con modelo}

--- a/src/app/cabezeras/cabezera/cabezera.component.html
+++ b/src/app/cabezeras/cabezera/cabezera.component.html
@@ -20,6 +20,9 @@
         <li>
             <a class="nav-link" routerLink="/eventos">Eventos <span class="sr-only">(current)</span></a>
         </li>
+        <li>
+            <a class="nav-link" routerLink="/pedidos">Pedidos <span class="sr-only">(current)</span></a>
+        </li>
         </ul>
     </div>
 </nav>
